k8s/manifests/jupyter/jupyter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/part-of: nemesis
    app.kubernetes.io/name: jupyter
spec:
  replicas: ${JUPYTER_REPLICAS}
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jupyter
      annotations:
        dapr.io/enabled: "false"
    spec:
      containers:
        - name: jupyter
          image: "${IMAGE_REGISTRY}/jupyter:${JUPYTER_IMAGE_TAG}"
          imagePullPolicy: ${IMAGE_PULL_POLICY}
          ports:
            - containerPort: ${JUPYTER_PORT}
              name: http
          readinessProbe:
            httpGet:
              path: /jupyter/api
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /jupyter/api
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: ${JUPYTER_CPU_REQUEST}
              memory: ${JUPYTER_MEMORY_REQUEST}
            limits:
              cpu: "${JUPYTER_CPU_LIMIT}"
              memory: ${JUPYTER_MEMORY_LIMIT}
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/part-of: nemesis
    app.kubernetes.io/name: jupyter
spec:
  selector:
    app.kubernetes.io/name: jupyter
  ports:
    - port: ${JUPYTER_PORT}
      targetPort: http
      name: http
