k8s/manifests/jupyter/ingressroute-jupyter.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nemesis-jupyter-ingress
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/part-of: nemesis
spec:
  entryPoints:
    - websecure
  routes:
    # Jupyter
    - match: PathPrefix(`/jupyter`)
      kind: Rule
      priority: 10
      middlewares:
        - name: nemesis-basic-auth
          namespace: ${NAMESPACE}
      services:
        - name: jupyter
          port: ${JUPYTER_PORT}

  tls:
    secretName: ${TLS_SECRET_NAME}
